feat: 1. socket send message 2. conversation 3. message dan lain lain
